--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,9 +3,18 @@
         <title>
             Article One 1 CHANDRASNATA DASH
             </title>
+    <style>
+       .container {
+           max.width:800px;
+           margin:0 auto;
+           color:grey;
+           font-family:sans-serif;
+       }
+    </style>
 </head>
 <body>
-    <div>
+    <div class="container">
+        <div>
         <a href="/"> Home</a>
         </div>
         <hr/>
@@ -25,6 +34,7 @@
                 <p>
                     This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
                 </p>
-            </div>
+         </div>
+    </div>     
     </body>
 </html>
