--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,7 +7,7 @@
        .container {
            max-width: 800px;
            margin: 0 auto;
-           color: grey;
+           color: green;
            font-family: sans-serif;
        }
     </style>
