--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,10 +5,14 @@
             </title>
     <style>
        .container {
-           max-width: 800px;
-           margin: 0 auto;
-           color: green;
-           font-family: sans-serif;
+    max-width: 800px;
+    margin: 0 auto;
+    color: #4CAF50;
+    font-family: sans-serif;
+    padding-top: 80px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
        }
     </style>
 </head>
