--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -3,6 +3,7 @@
         <title>
             Article Two 2 CHANDRASNATA DASH
             </title>
+    <link href="/ui/style.css" rel="stylesheet" />
     <style>
        .container {
     max-width: 800px;
