--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -3,8 +3,22 @@
         <title>
             Article Three 3 CHANDRASNATA DASH
             </title>
+    <link href="/ui/style.css" rel="stylesheet" />
+    <style>
+       .container {
+    max-width: 800px;
+    margin: 0 auto;
+    color: #4CAF50;
+    font-family: sans-serif;
+    padding-top: 80px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+       }
+    </style>
 </head>
 <body>
+    <div class="container">
     <div>
         <a href="/"> Home</a>
         </div>
@@ -19,6 +33,7 @@
                 <p>
                     This is the content for my third article.
                 </p>                
+            </div>
             </div>
     </body>
 </html>
