--- a/ui/index.html
+++ b/ui/index.html
@@ -4,16 +4,15 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
+        <div class="container">
+            <div class="center">
             <img id='madi' src="https://static.pexels.com/photos/60597/dahlia-red-blossom-bloom-60597.jpeg" class="img-medium"/>
-        </div>
-        <br>
-        <div id='main-text' class="center text-big bold">
-            Hi! I am Chandrasnata, and this is my first webapp.
-        </div>
-        <script>
-        alert ('Hi,I\'m Javascript!');
-        </script>
+            </div>
+            <br>
+            <div id='main-text' class="center text-big bold">
+               Hi! I am Chandrasnata, and this is my first webapp.
+            </div>
+       </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
