--- a/ui/index.html
+++ b/ui/index.html
@@ -8,11 +8,21 @@
             <div class="center">
             <img id='madi' src="https://static.pexels.com/photos/60597/dahlia-red-blossom-bloom-60597.jpeg" class="img-medium"/>
             </div>
+            <hr/>
             <br>
-            <div id='main-text' class="center text-big bold">
-               Hi! I am Chandrasnata, and this is my first webapp.
-            </div>
-       </div>
+            <h3>Personal</h3>
+                <div>
+                Hi,My name is Chandrasnata Dash
+                </div>
+                <hr/>
+                <h3>Professional</h3>
+                   <div>
+                    I am studying
+                    </div>
+                    <hr/>
+                        <div class="footer">
+                        </div>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
